added Junit Testing for AudioManager, Controller and Main