@@ -31,7 +31,21 @@
             <artifactId>javafx-media</artifactId>
             <version>19.0.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>19.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>19.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>19.0.2</version>
+        </dependency>
         <!-- JUnit Dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -108,6 +122,8 @@
                         --add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED
                         --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
